# 2D

./: Barcode.cpp  Barcode.h  CMakeLists.txt  CircleDetector.cpp  CircleDetector.h  README.md  barcode.cpp  barcode.h  circle_detector.cpp  circle_detector.h  circle_text.cpp  circle_text.h  image_processor.cpp  image_processor.h  main.cpp
